# CS213

./: README.txt  Report.docx  asciiArt.txt  poly.cpp  poly_claude.cpp  poly_gpt.cpp  polynomial.h  test.txt  testPy.py
A2/: CMakeLists.txt  Problem 2.cpp
A2/T2/: 3x3X_O.h  5x5 test.txt  5x5XO.cpp  5x5XO.h  A2_S20_Task23_20230553_20230231_20230121.docx  A2_S20_Task23_20230553_20230231_20230121_.h  A2_S20_Task23_20230553_20230231_20230121_5x5XO.cpp  A2_S20_Task23_20230553_20230231_20230121_5x5XO.h  A2_S20_Task23_20230553_20230231_20230121_Connect4.h  A2_S20_Task23_20230553_20230231_20230121_FourByFourXO.cpp  A2_S20_Task23_20230553_20230231_20230121_FourByFourXO.h  A2_S20_Task23_20230553_20230231_20230121_Misere3x3XO.h  A2_S20_Task23_20230553_20230231_20230121_PyramicTicTacToe.cpp  A2_S20_Task23_20230553_20230231_20230121_PyramicTicTacToe.h  A2_S20_Task23_20230553_20230231_20230121_WordTicTacToe.cpp  A2_S20_Task23_20230553_20230231_20230121_WordTicTacToe.h  A2_S20_Task23_20230553_20230231_20230121_ultimateXO.cpp  A2_S20_Task23_20230553_20230231_20230121_ultimateXO.h  BoardGame_Classes.h  CMakeLists.txt  Connect4.cpp  Connect4.h  Four-in-a-row.cpp  Four-in-a-row.h  FourByFourXO.cpp  FourByFourXO.h  Methods.cpp  Methods.h  Misere3x3XO.cpp  Misere3x3XO.h  PyramicTicTacToe.cpp  PyramicTicTacToe.h  Report.docx  TicTacToeNumbers.cpp  TicTacToeNumbers.h  UltimateTicTacToe.cpp  UltimateTicTacToe.h  WordTicTacToe.cpp  WordTicTacToe.h  app.cpp  (+6 more)
T2/: Gtest.cpp
T3/: ALU.cpp  ALU.h  CPU.cpp  CPU.h  CU.cpp  CU.h  Headers.h  Instructions.cpp  Instructions.h  Machine.cpp  Machine.h  run  (+16 more)
(+78 files in other folders)
